Fix z-index of footer dialog and of map
Also use 'with-modal' to avoid scrollbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -220,6 +220,7 @@ sup {
 
 #main {
     flex: 1 0 auto;
+    min-height: 50vh;
     z-index: 0;
 
     @include width-up-to($tablet-max) {
